--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "npm test && nodemon ./bin/www",
     "test": "gulp lint && webpack && mocha"
   },
   "dependencies": {
@@ -20,6 +20,7 @@
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.0.0",
     "mocha": "^2.3.3",
+    "nodemon": "^1.8.1",
     "supertest": "^1.1.0",
     "webpack": "^1.12.2"
   }
