--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cors": "^2.7.1",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "morgan": "~1.6.1",
+    "morgan": "~1.6.1"
   },
   "devDependencies": {
     "chai": "^3.4.0",
@@ -20,6 +20,6 @@
     "gulp-eslint": "^1.0.0",
     "mocha": "^2.3.3",
     "nodemon": "^1.8.1",
-    "supertest": "^1.1.0",
+    "supertest": "^1.1.0"
   }
 }
